Removes wecome page + adds minimal markup to application route

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,6 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
 
-{{outlet}}
+<header class='site-header'>I'm the Header for Marci's Flowers</header>
+
+<div class='outlet'>
+  {{outlet}}
+</div>
