Adds template markup for routes

--- a/app/templates/flowers.hbs
+++ b/app/templates/flowers.hbs
@@ -1,1 +1,42 @@
-{{outlet}}
+
+<h1>flowers</h1>
+
+<ul class='flower-list'>
+
+  <li class='flower'>
+    <figure>
+      <img src='http://www.marciwashington.com/night/peonies.jpg' alt='Peonies 1: painting by Marci Washington'>
+    </figure>
+  </li>
+
+  <li class='flower'>
+    <figure>
+      <img src='http://www.marciwashington.com/night/peonies.jpg' alt='Peonies 2: painting by Marci Washington'>
+    </figure>
+  </li>
+
+  <li class='flower'>
+    <figure>
+      <img src='http://www.marciwashington.com/night/peonies.jpg' alt='Peonies 3: painting by Marci Washington'>
+    </figure>
+  </li>
+
+  <li class='flower'>
+    <figure>
+      <img src='http://www.marciwashington.com/night/peonies.jpg' alt='Peonies 4: painting by Marci Washington'>
+    </figure>
+  </li>
+
+  <li class='flower'>
+    <figure>
+      <img src='http://www.marciwashington.com/night/peonies.jpg' alt='Peonies 5: painting by Marci Washington'>
+    </figure>
+  </li>
+
+  <li class='flower'>
+    <figure>
+      <img src='http://www.marciwashington.com/night/peonies.jpg' alt='Peonies 6: painting by Marci Washington'>
+    </figure>
+  </li>
+
+</ul>
