--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,1 +1,6 @@
-{{outlet}}
+
+<h1>About</h1>
+
+<figure>
+  <img src='http://marciwashington.com/marci2.jpg' alt='Portrait of Marci Washington'>
+</figure>
