--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -4,3 +4,11 @@
 <figure>
   <img src='http://marciwashington.com/marci2.jpg' alt='Portrait of Marci Washington'>
 </figure>
+
+<p>I grew up moving all over the California bay area. I moved to Oakland to attend the California College of the Arts and Crafts, where I received my BFA in 2002 and my MFA in 2008. I live and work in Berkeley, CA.</p>
+
+<p>I am interested in building a fictional narrative with connections to history as well as to the present. It's like I'm illustrating a novel that doesn't exist. If it did, it would probably be a lot like Wuthering Heights, Jane Eyre, or Turn of the Screw- novels which function as social commentary as well as haunting epics of supernatural romanticism.</p>
+
+<p>I am represented by Rena Bransten Projects in San Francisco.</p>
+
+<p>Drop me a line at <a href='mailto:marciwashington@gmail.com' target='email'>marciwashington@gmail.com</a></p>
