Switches images for local + adds general markup

--- a/app/templates/404.hbs
+++ b/app/templates/404.hbs
@@ -4,5 +4,5 @@
 <p>Whoops! This route does not exist. Try another!</p>
 
 <figure>
-  <img src='http://marciwashington.com/spell/spell.JPG' alt='Painting: Spell'>
+  <img src='images/paintings/spell.jpg' alt='Painting: Spell'>
 </figure>
