--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -27,8 +27,11 @@
 
 </header>
 
-<div class='outlet'>
+<main class='outlet'>
   {{outlet}}
-</div>
+</main>
 
-<footer class='site-footer'>I'm the Footer for Marci's Flowers</footer>
+<footer class='site-footer'>
+  <a href='http://marciwashington.com' target='website'>marciwashington.com</a> -
+  <a href='mailto:marciwashington@gmail.com' target='email'>email marci</a>
+</footer>
