--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -2,7 +2,7 @@
 <h1>About</h1>
 
 <figure>
-  <img src='http://marciwashington.com/marci2.jpg' alt='Portrait of Marci Washington'>
+  <img src='images/portrait.jpg' alt='Portrait of Marci Washington'>
 </figure>
 
 <p>I grew up moving all over the California bay area. I moved to Oakland to attend the California College of the Arts and Crafts, where I received my BFA in 2002 and my MFA in 2008. I live and work in Berkeley, CA.</p>
