--- a/app/templates/welcome.hbs
+++ b/app/templates/welcome.hbs
@@ -2,5 +2,5 @@
 <h1>Welcome</h1>
 
 <figure>
-  <img src='http://marciwashington.com/night/peonies.jpg' alt='Peonies: painting by Marci Washington'>
+  <img src='images/paintings/peonies.jpg' alt='Peonies: painting by Marci Washington'>
 </figure>
